inArea fully operational